updated claude md and added documentaion